# minipet-fashcard

./: .gitignore  README.md  eslint.config.js  implementation_plan.md  package-lock.json  package.json  test_swap.js  tsconfig.json  vite.config.ts
.amazonq/rules/: tauri-migration.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  intelligence.rs  lib.rs  main.rs  translate.rs  tray.rs
src-tauri/src/pet/: loader.rs  manager.rs  mod.rs  pomodoro.rs
src-tauri/src/window/: mod.rs  overlay.rs  settings.rs
src/assets/default-pets/lyra/: pet.json
src/lib/: electron-shim.ts  tauri-api.ts
src/renderer/flashcard/: flashcard.ts  index.html
src/renderer/overlay/: electron.d.ts  index.html  overlay-entry.ts  overlay.css  overlay.ts
src/renderer/overlay/engine/: animation-controller.ts  pet-state-machine.ts  sprite-renderer.ts
src/renderer/settings/: index.html  settings-entry.ts  settings.css  settings.ts
src/renderer/speech/: index.html  speech.ts
src/shared/: constants.ts  flashcards.ts
src/shared/i18n/: translations.ts
src/shared/types/: ipc.types.ts  pet.types.ts  settings.types.ts
