[package]
name = "minipet"
version = "1.0.0"
edition = "2021"

[lib]
name = "minipet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "minipet"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "fs", "process", "io-util"] }
zip = "2"
trash = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
